--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -1,16 +1,17 @@
 version: '3'
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
     ports:
       - "5000:5000"
     volumes:
-      - .:/app
-      - ./src:/usr/share/nginx/html
+      - ./vocabulary:/app/vocabulary
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - frontend-network
-
     tty: true
     stdin_open: true
 
