--- a/vocabulary/.env.example
+++ b/vocabulary/.env.example
@@ -2,3 +2,4 @@ VITE_AWS_COGNITO_DOMAIN =
 VITE_AWS_COGNITO_CLIENTID =
 VITE_AWS_COGNITO_REDIRECTURI =
 VITE_AWS_COGNITO_RESPONSETYPE =
+VITE_API_URL = 
